src/objects/UnfollowTest__c.object
<CustomObject>
    <description>This custom object exists solely to test the app upon install &amp; updates.  I created it as many customers had their installations fail due to validation rules or triggers, despite the fact that those failures had nothing to do with the app itself, but rather the creating of dummy data.

Note all tests passed on the original standard objects - leads, opportunities, and cases, which I expect to be the objects for majority of unfollow rules.

This app is an Aloha app so this extra object should not count towards your app limit.  Contact jkucera@salesforce.com with questions.</description>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decimal__c</fullName>
        <label>Decimal</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Integer__c</fullName>
        <formula>ROUND( Decimal__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>String__c</fullName>
        <label>String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Chatter Unfollow Test Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Unfollow Test Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>